=======
CHANGES
=======

------
1.0.3
------

* added new, load and save methods to table directly
* added ImportTable method to table for interactive use
* fixed clicking outside column header bug

------
1.0.2
------

* restored Filtering.py, filtering works ok
* more improvement to auto resize cols, now checks currrent col sizes
* fixed model.save() method
* added ability to save table, add rows to popup menu
* fixed delete cells button binding
* cell font preferences now uses available fonts from os
* removed unused prefs from dialog

------
1.0.1
------

* add_Column method fixed
* Added ability to align cells left right or center
* Fixed problem of sort order lost when deleting rows
* Sort in descending order works correctly
* Fixes to plotting, but needs reworking or removal
* Added setSelectedCells method so a block of cells can be selected
* Improved text fitting in cells
* Automatic resizing of columns improved

